--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="hero-text">
             <h1 style="font-size: 45px; margin-bottom: 10px;">Welcome to VGS Hotel</h1>
             <p style="font-size: 25px; margin: 10px 10px">Indulge in opulence and sophistication at VGS Hotels – where every moment is a masterpiece of luxury. Elevate your stay with unrivaled comfort and personalized service in the heart of elegance</p>
-            <button class="book-button">Book</button>
+            <button class="book-button">Book Now</button>
         </div>
     </section>
     <section class="about-section">
