--- a/index.html
+++ b/index.html
@@ -61,7 +61,38 @@
         </div>
         
     </section>
+    <div class="help-button">
+        <h4>Need Help?</h4>
+    </div>
+    <h2 class="form-heading">FIll the form for Booking Room</h2>
+    <section class="form-container">
+        <form action="">
+            <div class="form-group">
+                <label for="name">Full Name</label><br>
+                <input type="text" id="name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email Id</label><br>
+                <input type="email" id="email" required>
+            </div>
+            <div class="form-group">
+                <label for="booking-date">Date of Booking</label><br>
+                <input type="date" name="" id="booking-date" required>
+            </div>
+            <div class="form-group">
+                <label for="room-type">Select Room Type</label><br>
+                <select name="room-type" id="room-type" required>
+                    <option value=""selected disabled>Select Room</option>
+                    <option value="Single Room">Single Room</option>
+                    <option value="Family Room">Family Room</option>
+                    <option value="Duplex Room">Duplex Room</option>
+                </select>
+            </div>
+            <br>
+            <input class="Book-button" type="submit" value="Book">
+        </form>
 
+    </section>
 
     
 </body>
