--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h1 class="room-heading">Room Types</h1>
     <section class="room-type-container">
         <div class="room-images">
-            <img src="room.jpg" alt="Luxury Room">
+            <img src="/LECTURES PRACTICE/HTML-and-CSS-Hotel-Landing-Page/room.jpg" alt="Luxury Room">
         </div>
         
         <div class="room-list">
@@ -106,7 +106,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="VGS logo.png" alt="VGS Hotel Logo">
+                    <img src="/LECTURES PRACTICE/HTML-and-CSS-Hotel-Landing-Page/VGS logo.png" alt="VGS Hotel Logo">
                 </div>
                 <div class="footer-links">
                     <ul>
