--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="offers"><a href="">Offers</a></div>
         <div class="mobile-app"><a href="MobileApp.html" target="_self">Mobile App</a></div>
 
-        <div class="login"><a href="">Login</a></div>
+        <div class="login"><a href="login.html">Login</a></div>
     </div>
     <section class="hero-section">
         <div class="hero-text">
@@ -57,7 +57,7 @@
     <h1 class="room-heading">Room Types</h1>
     <section class="room-type-container">
         <div class="room-images">
-            <img src="/LECTURES PRACTICE/HTML-and-CSS-Hotel-Landing-Page/room.jpg" alt="Luxury Room">
+            <img src="room.jpg" alt="Luxury Room">
         </div>
         
         <div class="room-list">
@@ -106,7 +106,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="/LECTURES PRACTICE/HTML-and-CSS-Hotel-Landing-Page/VGS logo.png" alt="VGS Hotel Logo">
+                    <img src="VGS logo.png" alt="VGS Hotel Logo">
                 </div>
                 <div class="footer-links">
                     <ul>
