added hyperlinks to the navigation bar

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
     <div class="navigation">
         <div class="logo"><a href="index.html">VGS HOTELS</a></div>
-        <div class="our-hotels"><a href="">Our Hotels</a></div>
-        <div class="offers"><a href="">Offers</a></div>
+        <div class="our-hotels"><a href="ourHotels.html">Our Hotels</a></div>
+        <div class="offers"><a href="offers.html">Offers</a></div>
         <div class="mobile-app"><a href="MobileApp.html" target="_self">Mobile App</a></div>
 
         <div class="login"><a href="login.html">Login</a></div>
