--- a/offers.html
+++ b/offers.html
@@ -3,17 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VGS Hotels</title>
+    <title>Special Offers</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <!-- FAVICON LOGO -->
-    <link rel="icon" type ="image/x-icon" href="favicon.ico">
-    <!-- Font awesome kit setup using a javascript link -->
-    <script src="https://kit.fontawesome.com/010ef753e0.js" crossorigin="anonymous"></script>
- 
-
+    <style>
+        /* CSS styles for the page */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .offer-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .offer-card {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .offer-card h2 {
+            font-size: 18px;
+            margin-bottom: 10px;
+        }
+        .offer-card p {
+            margin-bottom: 15px;
+        }
+        .offer-card button {
+            padding: 10px 20px;
+            border: none;
+            background-color: #007bff;
+            color: #fff;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
     <div class="navigation">
@@ -24,26 +57,28 @@
 
         <div class="login"><a href="login.html">Login</a></div>
     </div>
-
-    <div class="MobileApp-content">
-       <h3 style="text-align: center;">Our Mobile App</h3>
-       <br>
-       <h3 style="text-align: center;">VGS HOTELS Mobile App</h3>
-       <img src="mobileapp.jpeg" alt="Image of our mobile app" style="padding-left: 40%;
-       padding-right: 50%; padding-bottom: 5%; margin-top: 5px;">
+    <div class="container">
+        <h1>Special Offers</h1>
+        <div class="offer-list">
+            <!-- Offer Cards -->
+            <div class="offer-card">
+                <h2>Early Bird Discount</h2>
+                <p>Book your stay in advance and get 15% off!</p>
+                <button>Book Now</button>
+            </div>
+            <div class="offer-card">
+                <h2>Weekend Getaway</h2>
+                <p>Enjoy a relaxing weekend with our special package!</p>
+                <button>Explore</button>
+            </div>
+            <div class="offer-card">
+                <h2>Stay Longer, Save More</h2>
+                <p>Stay for 3 nights or more and save up to 20%!</p>
+                <button>Learn More</button>
+            </div>
+            <!-- Add more offer cards as needed -->
+        </div>
     </div>
-    <div class="Features-list">
-        <h3>Features Available on app</h3>
-        <ul>
-            <li><i class="fa-solid fa-wifi"></i>Order Food On App</li>
-            <li><i class="fa-solid fa-utensils"></i>Online Check in</li>
-            <li><i class="fa-solid fa-person-swimming"></i>Amenities Info</li>
-            <li><i class="fa-solid fa-dumbbell"></i>Booking Details</li>
-            <li><i class="fa-solid fa-mug-saucer"></i>Check-Out</li>
-        </ul>
-    </div>
-
-
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
@@ -77,6 +112,5 @@
             </div>
         </div>
     </footer>
-
 </body>
 </html>
