--- a/ourHotels.html
+++ b/ourHotels.html
@@ -3,19 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VGS Hotels</title>
+    <title>Our Hotels</title>
+    <style>
+        /* CSS styles for the page */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .hotel-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .hotel-card {
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 10px;
+        }
+        .hotel-card h2 {
+            font-size: 20px;
+            margin-bottom: 5px;
+        }
+        .hotel-card p {
+            margin-bottom: 10px;
+        }
+    </style>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <!-- FAVICON LOGO -->
-    <link rel="icon" type ="image/x-icon" href="favicon.ico">
-    <!-- Font awesome kit setup using a javascript link -->
-    <script src="https://kit.fontawesome.com/010ef753e0.js" crossorigin="anonymous"></script>
- 
-
 </head>
 <body>
+
     <div class="navigation">
         <div class="logo"><a href="index.html">VGS HOTELS</a></div>
         <div class="our-hotels"><a href="ourHotels.html">Our Hotels</a></div>
@@ -24,26 +47,25 @@
 
         <div class="login"><a href="login.html">Login</a></div>
     </div>
-
-    <div class="MobileApp-content">
-       <h3 style="text-align: center;">Our Mobile App</h3>
-       <br>
-       <h3 style="text-align: center;">VGS HOTELS Mobile App</h3>
-       <img src="mobileapp.jpeg" alt="Image of our mobile app" style="padding-left: 40%;
-       padding-right: 50%; padding-bottom: 5%; margin-top: 5px;">
+    <div class="container">
+        <h1>Our Hotels in Different Cities</h1>
+        <div class="hotel-list">
+            <!-- Hotel Cards -->
+            <div class="hotel-card">
+                <h2>New York</h2>
+                <p>Hotel A</p>
+                <p>Hotel B</p>
+                <p>Hotel C</p>
+            </div>
+            <div class="hotel-card">
+                <h2>Los Angeles</h2>
+                <p>Hotel X</p>
+                <p>Hotel Y</p>
+                <p>Hotel Z</p>
+            </div>
+            <!-- Add more hotel cards for other cities -->
+        </div>
     </div>
-    <div class="Features-list">
-        <h3>Features Available on app</h3>
-        <ul>
-            <li><i class="fa-solid fa-wifi"></i>Order Food On App</li>
-            <li><i class="fa-solid fa-utensils"></i>Online Check in</li>
-            <li><i class="fa-solid fa-person-swimming"></i>Amenities Info</li>
-            <li><i class="fa-solid fa-dumbbell"></i>Booking Details</li>
-            <li><i class="fa-solid fa-mug-saucer"></i>Check-Out</li>
-        </ul>
-    </div>
-
-
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
@@ -77,6 +99,5 @@
             </div>
         </div>
     </footer>
-
 </body>
 </html>
