--- a/login.html
+++ b/login.html
@@ -6,7 +6,8 @@
     <title>Login Page</title>
     <link rel="stylesheet" href="login-style.css">
 </head>
-<body>
+<body style="background-image: url('hero-image.jpg'); background-size: cover;">
+
     <div class="login-container">
         <h2>Login</h2>
         <form id="loginForm" action="login.php" method="POST">
