--- a/ourHotels.html
+++ b/ourHotels.html
@@ -10,6 +10,20 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background-image: url('hotelslist.jpg'); /* Replace 'hotel-background.jpg' with your hotel image path */
+            background-size: cover;
+            background-position: center;
+            min-height: 100vh;
+            overflow: hidden; /* Prevents background image overflow */
+        }
+        .overlay {
+            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
         }
         .container {
             max-width: 1200px;
@@ -26,6 +40,7 @@
             border: 1px solid #ddd;
             border-radius: 8px;
             padding: 10px;
+            background-color: rgba(255, 255, 255, 0.8); /* White background with opacity */
         }
         .hotel-card h2 {
             font-size: 20px;
@@ -48,20 +63,20 @@
         <div class="login"><a href="login.html">Login</a></div>
     </div>
     <div class="container">
-        <h1>Our Hotels in Different Cities</h1>
+        <h1 style="color: white;">Our Hotels in Different Cities</h1>
         <div class="hotel-list">
             <!-- Hotel Cards -->
             <div class="hotel-card">
-                <h2>New York</h2>
-                <p>Hotel A</p>
-                <p>Hotel B</p>
-                <p>Hotel C</p>
+                <h2>Hyderabad</h2>
+                <p>Hotel Royal Palace</p>
+                <p>Hotel Skyview</p>
+                <p>Hotel Raddison</p>
             </div>
             <div class="hotel-card">
-                <h2>Los Angeles</h2>
-                <p>Hotel X</p>
-                <p>Hotel Y</p>
-                <p>Hotel Z</p>
+                <h2>Banglore</h2>
+                <p>Hotel Royal Mysore</p>
+                <p>Hotel Treebo</p>
+                <p>Hotel HighLand</p>
             </div>
             <!-- Add more hotel cards for other cities -->
         </div>
