--- a/dashboard.html
+++ b/dashboard.html
@@ -39,7 +39,7 @@
             </form>
         </div>
         <div class="booking-list">
-            <h2>All Bookings</h2>
+            <h2>List of All the Bookings</h2>
             <div id="bookingTable"></div>
         </div>
     </div>
